--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 remote_theme: pages-themes/architect@v0.2.0
+domain: ncpatrick.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://ncpatrick.github.io/Brownsweb/
